[gd_scene load_steps=29 format=3 uid="uid://h81bd8xrr2u4"]

[ext_resource type="Script" path="res://program/merge.gd" id="1_wgut7"]
[ext_resource type="Script" path="res://program/merge_ui.gd" id="2_pisvf"]
[ext_resource type="Texture2D" uid="uid://cjhv6jn1uh1g5" path="res://assets/gutter/arrow.png" id="3_w55ma"]
[ext_resource type="FontFile" uid="uid://5nbdu04dcxnc" path="res://assets/fira_mono.otf" id="4_2ibaf"]
[ext_resource type="Texture2D" uid="uid://d33m4000uobw2" path="res://assets/gutter/minus.png" id="4_4scjo"]
[ext_resource type="Texture2D" uid="uid://dsyyfcgjle7to" path="res://assets/gutter/plus.png" id="5_6df1e"]
[ext_resource type="Texture2D" uid="uid://c7twure74po0m" path="res://assets/gutter/minus_section.png" id="5_nr5m2"]
[ext_resource type="Texture2D" uid="uid://d4i2palh7gbvt" path="res://assets/gutter/plus_section.png" id="6_pipc0"]
[ext_resource type="PackedScene" uid="uid://ckq3qntjrhh3d" path="res://program/info_menu.tscn" id="7_s8b7j"]
[ext_resource type="Texture2D" uid="uid://j3driu05nw85" path="res://assets/ui/up.svg" id="8_jwhak"]
[ext_resource type="Texture2D" uid="uid://bj2o716ndk6r" path="res://assets/ui/down.svg" id="9_bejhp"]
[ext_resource type="Texture2D" uid="uid://cxy6kk18lboqv" path="res://assets/jump/minus_section.png" id="10_abgwu"]
[ext_resource type="Texture2D" uid="uid://xggx3hxwubwk" path="res://assets/jump/minus.png" id="11_hl2m5"]
[ext_resource type="Texture2D" uid="uid://h36aer5k32iq" path="res://assets/ui/menu.svg" id="12_whis5"]
[ext_resource type="Texture2D" uid="uid://c67mx5bsyjww" path="res://assets/jump/plus_section.png" id="13_ncrcj"]
[ext_resource type="Texture2D" uid="uid://dcv8ukasri142" path="res://assets/jump/plus.png" id="14_lhkgs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_knhq5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fwmy0"]
bg_color = Color(0.277344, 0.277344, 0.277344, 1)
border_width_left = 1
border_width_top = 1
border_color = Color(0.152344, 0.152344, 0.152344, 1)
corner_radius_top_left = 6
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bh2ny"]
bg_color = Color(0.152344, 0.152344, 0.152344, 1)
corner_radius_top_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hyy40"]
bg_color = Color(0.152344, 0.152344, 0.152344, 1)
corner_radius_top_left = 6
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ptofw"]
bg_color = Color(0.277344, 0.277344, 0.277344, 1)
border_width_left = 1
border_width_top = 1
border_color = Color(0.152344, 0.152344, 0.152344, 1)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nwkif"]
bg_color = Color(0.152344, 0.152344, 0.152344, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lceco"]
bg_color = Color(0.152344, 0.152344, 0.152344, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rdyyg"]
bg_color = Color(0.278431, 0.278431, 0.278431, 1)
border_width_left = 1
border_width_bottom = 1
border_color = Color(0.152344, 0.152344, 0.152344, 1)
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ax0vs"]
bg_color = Color(0.152344, 0.152344, 0.152344, 1)
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2bxsf"]
bg_color = Color(0.152344, 0.152344, 0.152344, 1)
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3l6ny"]
bg_color = Color(0.175781, 0.175781, 0.175781, 1)
corner_radius_top_right = 6
corner_radius_bottom_right = 6

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sy2pa"]

[node name="Merge" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
script = ExtResource("1_wgut7")

[node name="UI" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5
script = ExtResource("2_pisvf")
gutter_arrow = ExtResource("3_w55ma")
gutter_minus = ExtResource("4_4scjo")
gutter_minus_section = ExtResource("5_nr5m2")
gutter_plus = ExtResource("5_6df1e")
gutter_plus_section = ExtResource("6_pipc0")
jump_minus = ExtResource("11_hl2m5")
jump_minus_section = ExtResource("10_abgwu")
jump_plus = ExtResource("14_lhkgs")
jump_plus_section = ExtResource("13_ncrcj")

[node name="MenuBarContainer" type="HBoxContainer" parent="UI"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5

[node name="InfoMenuButton" parent="UI/MenuBarContainer" instance=ExtResource("7_s8b7j")]
layout_mode = 2

[node name="SourceMenuContainer" type="HBoxContainer" parent="UI/MenuBarContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="SourceLastButton" type="Button" parent="UI/MenuBarContainer/SourceMenuContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
tooltip_text = "Jump to last removed or changed line"
focus_mode = 0
disabled = true
icon = ExtResource("8_jwhak")
icon_alignment = 1

[node name="SourceNextButton" type="Button" parent="UI/MenuBarContainer/SourceMenuContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
tooltip_text = "Jump to next removed or changed line"
focus_mode = 0
icon = ExtResource("9_bejhp")
icon_alignment = 1

[node name="SourceSectionButton" type="OptionButton" parent="UI/MenuBarContainer/SourceMenuContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
tooltip_text = "Jump to section"
focus_mode = 0
item_count = 3
fit_to_longest_item = false
allow_reselect = true
popup/item_0/text = "= Whole Section Removed"
popup/item_0/icon = ExtResource("10_abgwu")
popup/item_0/id = 0
popup/item_1/text = "= Contains Removed Lines"
popup/item_1/icon = ExtResource("11_hl2m5")
popup/item_1/id = 1
popup/item_2/text = ""
popup/item_2/id = 2
popup/item_2/separator = true

[node name="EmptyFill" type="Control" parent="UI/MenuBarContainer/SourceMenuContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SourceOptionMenuButton" type="MenuButton" parent="UI/MenuBarContainer/SourceMenuContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(31, 0)
layout_mode = 2
icon = ExtResource("12_whis5")
icon_alignment = 1
item_count = 3
popup/item_0/text = "Line Numbers"
popup/item_0/checkable = 1
popup/item_0/checked = true
popup/item_0/id = 0
popup/item_1/text = "Map"
popup/item_1/checkable = 1
popup/item_1/checked = true
popup/item_1/id = 1
popup/item_2/text = "Draw Control Characters"
popup/item_2/checkable = 1
popup/item_2/id = 2

[node name="TargetMenuContainer" type="HBoxContainer" parent="UI/MenuBarContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="TargetLastButton" type="Button" parent="UI/MenuBarContainer/TargetMenuContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
tooltip_text = "Jump to last new line"
focus_mode = 0
disabled = true
icon = ExtResource("8_jwhak")
icon_alignment = 1

[node name="TargetNextButton" type="Button" parent="UI/MenuBarContainer/TargetMenuContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
tooltip_text = "Jump to next new line"
focus_mode = 0
icon = ExtResource("9_bejhp")
icon_alignment = 1

[node name="TargetSectionButton" type="OptionButton" parent="UI/MenuBarContainer/TargetMenuContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
tooltip_text = "Jump to section"
focus_mode = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_knhq5")
item_count = 3
fit_to_longest_item = false
allow_reselect = true
popup/item_0/text = "= Whole Section New"
popup/item_0/icon = ExtResource("13_ncrcj")
popup/item_0/id = 0
popup/item_1/text = "= Contains New Lines"
popup/item_1/icon = ExtResource("14_lhkgs")
popup/item_1/id = 1
popup/item_2/text = ""
popup/item_2/id = 2
popup/item_2/separator = true

[node name="Seperator" type="ColorRect" parent="UI/MenuBarContainer/TargetMenuContainer"]
modulate = Color(1, 1, 1, 0.501961)
custom_minimum_size = Vector2(1, 27)
layout_mode = 2
size_flags_vertical = 4
color = Color(0.219608, 0.219608, 0.219608, 1)

[node name="SaveButton" type="Button" parent="UI/MenuBarContainer/TargetMenuContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(52, 0)
layout_mode = 2
focus_mode = 0
text = "Save"

[node name="SaveFileDialog" type="FileDialog" parent="UI/MenuBarContainer/TargetMenuContainer/SaveButton"]
unique_name_in_owner = true
title = "Save merged intl file"
initial_position = 2
size = Vector2i(800, 600)
popup_window = true
access = 2
filters = PackedStringArray("*.txt")

[node name="ExportMenuButton" type="MenuButton" parent="UI/MenuBarContainer/TargetMenuContainer"]
custom_minimum_size = Vector2(76, 0)
layout_mode = 2
tooltip_text = "(wip)"
text = "Export.."
flat = false
item_count = 4
popup/item_0/text = "CSV"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_1/text = ""
popup/item_1/id = 1
popup/item_1/separator = true
popup/item_2/text = "Untranslated only"
popup/item_2/id = 2
popup/item_2/disabled = true
popup/item_3/text = "New lines only"
popup/item_3/id = 3
popup/item_3/disabled = true

[node name="EmptyFill" type="Control" parent="UI/MenuBarContainer/TargetMenuContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TargetOptionMenuButton" type="MenuButton" parent="UI/MenuBarContainer/TargetMenuContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(31, 0)
layout_mode = 2
icon = ExtResource("12_whis5")
icon_alignment = 1
item_count = 3
popup/item_0/text = "Line Numbers"
popup/item_0/checkable = 1
popup/item_0/checked = true
popup/item_0/id = 0
popup/item_1/text = "Map"
popup/item_1/checkable = 1
popup/item_1/checked = true
popup/item_1/id = 1
popup/item_2/text = "Draw Control Characters"
popup/item_2/checkable = 1
popup/item_2/id = 2

[node name="EditorContainer" type="HBoxContainer" parent="UI"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="TabContainer" type="VBoxContainer" parent="UI/EditorContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="SourceButton" type="Button" parent="UI/EditorContainer/TabContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(31, 61)
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_fwmy0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bh2ny")
theme_override_styles/disabled = SubResource("StyleBoxFlat_hyy40")

[node name="Label" type="Label" parent="UI/EditorContainer/TabContainer/SourceButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -13.0
offset_right = 26.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.5708
pivot_offset = Vector2(26.5, 13)
text = "Source"
horizontal_alignment = 1

[node name="SplitButton" type="Button" parent="UI/EditorContainer/TabContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(31, 61)
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_ptofw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nwkif")
theme_override_styles/disabled = SubResource("StyleBoxFlat_lceco")
disabled = true

[node name="Label" type="Label" parent="UI/EditorContainer/TabContainer/SplitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -13.0
offset_right = 26.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.5708
pivot_offset = Vector2(26.5, 13)
text = "Split"
horizontal_alignment = 1

[node name="TargetButton" type="Button" parent="UI/EditorContainer/TabContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(31, 61)
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_rdyyg")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ax0vs")
theme_override_styles/disabled = SubResource("StyleBoxFlat_2bxsf")

[node name="Label" type="Label" parent="UI/EditorContainer/TabContainer/TargetButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -13.0
offset_right = 26.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.5708
pivot_offset = Vector2(26.5, 13)
text = "Target"
horizontal_alignment = 1

[node name="SourceTextEdit" type="TextEdit" parent="UI/EditorContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/background_color = Color(0.11, 0.12, 0.13, 1)
theme_override_colors/font_color = Color(0.831373, 0.831373, 0.831373, 1)
theme_override_fonts/font = ExtResource("4_2ibaf")
theme_override_styles/normal = SubResource("StyleBoxFlat_3l6ny")
theme_override_styles/focus = SubResource("StyleBoxEmpty_sy2pa")
minimap_draw = true
caret_blink = true

[node name="TargetTextEdit" type="TextEdit" parent="UI/EditorContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/background_color = Color(0.109804, 0.121569, 0.129412, 1)
theme_override_colors/font_color = Color(0.831373, 0.831373, 0.831373, 1)
theme_override_fonts/font = ExtResource("4_2ibaf")
theme_override_styles/normal = SubResource("StyleBoxFlat_3l6ny")
theme_override_styles/focus = SubResource("StyleBoxEmpty_sy2pa")
placeholder_text = "Please wait...
Merging can take several minutes..."
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
drag_and_drop_selection_enabled = false
caret_blink = true

[node name="StatusBarContainer" type="HBoxContainer" parent="UI"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="UI/StatusBarContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Loading data .."

[node name="TranslationsParsedLabel" type="Label" parent="UI/StatusBarContainer"]
unique_name_in_owner = true
visible = false
modulate = Color(0.372549, 0.568627, 1, 1)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Lines that were found in the source file"
mouse_filter = 0
theme_override_font_sizes/font_size = 12
text = "Parsed Translations: 0"
horizontal_alignment = 1

[node name="SectionsAddedLabel" type="Label" parent="UI/StatusBarContainer"]
unique_name_in_owner = true
visible = false
modulate = Color(0.560784, 1, 0.529412, 1)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Whole new sections that were present in the target file but were missing in the source file
(Edited sections that got some new lines added or changed)"
mouse_filter = 0
theme_override_font_sizes/font_size = 12
text = "New Sections: 0 (0)"
horizontal_alignment = 1

[node name="LinesAddedLabel" type="Label" parent="UI/StatusBarContainer"]
unique_name_in_owner = true
visible = false
modulate = Color(0.560784, 1, 0.529412, 1)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "New lines that were present in the target file but were missing in the source file"
mouse_filter = 0
theme_override_font_sizes/font_size = 12
text = "New Lines: 0"
horizontal_alignment = 1

[node name="SectionsRemovedLabel" type="Label" parent="UI/StatusBarContainer"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 0.52549, 0.458824, 1)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Sections that were still present in the source file but no longer exist at all in the target file
(Edited sections that got some lines removed)"
mouse_filter = 0
theme_override_font_sizes/font_size = 12
text = "Removed Sections: 0 (0)"
horizontal_alignment = 1

[node name="LinesRemovedLabel" type="Label" parent="UI/StatusBarContainer"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 0.52549, 0.458824, 1)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Lines that were still present in the source file but no longer exist in the target file"
mouse_filter = 0
theme_override_font_sizes/font_size = 12
text = "Removed Lines: 0"
horizontal_alignment = 1

[node name="DeferrTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="StillWorkingTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.333

[node name="DoubleClickTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.4
one_shot = true

[node name="ResetLabelsTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true

[connection signal="pressed" from="UI/MenuBarContainer/SourceMenuContainer/SourceLastButton" to="UI" method="_on_source_last_button_pressed"]
[connection signal="pressed" from="UI/MenuBarContainer/SourceMenuContainer/SourceNextButton" to="UI" method="_on_source_next_button_pressed"]
[connection signal="item_selected" from="UI/MenuBarContainer/SourceMenuContainer/SourceSectionButton" to="UI" method="_on_source_section_button_item_selected"]
[connection signal="pressed" from="UI/MenuBarContainer/TargetMenuContainer/TargetLastButton" to="UI" method="_on_target_last_button_pressed"]
[connection signal="pressed" from="UI/MenuBarContainer/TargetMenuContainer/TargetNextButton" to="UI" method="_on_target_next_button_pressed"]
[connection signal="item_selected" from="UI/MenuBarContainer/TargetMenuContainer/TargetSectionButton" to="UI" method="_on_target_section_button_item_selected"]
[connection signal="pressed" from="UI/MenuBarContainer/TargetMenuContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="file_selected" from="UI/MenuBarContainer/TargetMenuContainer/SaveButton/SaveFileDialog" to="." method="_on_save_file_dialog_file_selected"]
[connection signal="pressed" from="UI/EditorContainer/TabContainer/SourceButton" to="UI" method="_on_source_button_pressed"]
[connection signal="pressed" from="UI/EditorContainer/TabContainer/SplitButton" to="UI" method="_on_split_button_pressed"]
[connection signal="pressed" from="UI/EditorContainer/TabContainer/TargetButton" to="UI" method="_on_target_button_pressed"]
[connection signal="caret_changed" from="UI/EditorContainer/SourceTextEdit" to="UI" method="_on_source_text_edit_caret_changed"]
[connection signal="gutter_clicked" from="UI/EditorContainer/SourceTextEdit" to="UI" method="_on_source_text_edit_gutter_clicked"]
[connection signal="text_changed" from="UI/EditorContainer/SourceTextEdit" to="UI" method="_on_source_text_edit_text_changed"]
[connection signal="text_set" from="UI/EditorContainer/SourceTextEdit" to="UI" method="_on_source_text_edit_text_changed"]
[connection signal="caret_changed" from="UI/EditorContainer/TargetTextEdit" to="UI" method="_on_target_text_edit_caret_changed"]
[connection signal="gutter_clicked" from="UI/EditorContainer/TargetTextEdit" to="UI" method="_on_target_text_edit_gutter_clicked"]
[connection signal="text_changed" from="UI/EditorContainer/TargetTextEdit" to="UI" method="_on_target_text_edit_text_changed"]
[connection signal="text_set" from="UI/EditorContainer/TargetTextEdit" to="UI" method="_on_target_text_edit_text_changed"]
[connection signal="timeout" from="DeferrTimer" to="." method="_on_deferr_timer_timeout"]
[connection signal="timeout" from="StillWorkingTimer" to="." method="_on_still_working_timer_timeout"]
[connection signal="timeout" from="ResetLabelsTimer" to="UI" method="_on_reset_labels_timer_timeout"]
